display container is completed along with the styligg  part

--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   box-sizing: border-box;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
+  /* background: #0f2648; */
 }
-
-
