--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
-footer {
-  width: 100vw;
-  background-color: darkred;
+.footer_div {
+  /* width: 100vw; */
+  /* background-color: darkred; */
+
 }
