--- a/css/header.css
+++ b/css/header.css
@@ -1,26 +1,30 @@
 header {
   width: -webkit-fill-available;
-  height: 60px;
+  height: 30px;
   /* background-color: white; */
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  padding: 4px;
+  margin-top: 5px;
+  /* padding: 2px; */
+  /* padding-top: 3px; */
 }
 .logo_container {
-  width: 15%;
+  width: 30%;
   height: 100%;
   display: inline-flex;
 }
 .logo_container .logo {
-  width: 50%;
+  width: 12%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
-.logo_container img {
-  width: 90%;
+.logo_container .logo i {
+  margin-right: 5px;
+  /* width: 500px; */
+  /* width: 90%;
   height: 100%;
-  border-radius: 30%;
+  border-radius: 30%; */
 }
 .logo_container .studio_name p {
   margin: 0;
@@ -45,12 +49,15 @@ header {
   position: absolute;
   padding: 10px;
   padding-left: 3px;
+  top: 2px;
 }
 .search_container input {
-  width: 100%;
-  border: 1px solid;
+  height: 25px;
+  width: 350px;
+  /* margin-top: 10px; */
+  border: 1px solid black;
   border-radius: 10px;
-  padding: 10px;
+  padding: 2px;
   padding-left: 22px;
   outline: none;
 }
